; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-seri.c_rball_init.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-seri.c_rball_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.read_block = type { i8*, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.read_block*, i8*, i32)* @rball_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rball_init(%struct.read_block* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.read_block*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.read_block* %0, %struct.read_block** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i8*, i8** %5, align 8
  %8 = load %struct.read_block*, %struct.read_block** %4, align 8
  %9 = getelementptr inbounds %struct.read_block, %struct.read_block* %8, i32 0, i32 0
  store i8* %7, i8** %9, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.read_block*, %struct.read_block** %4, align 8
  %12 = getelementptr inbounds %struct.read_block, %struct.read_block* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 8
  %13 = load %struct.read_block*, %struct.read_block** %4, align 8
  %14 = getelementptr inbounds %struct.read_block, %struct.read_block* %13, i32 0, i32 2
  store i64 0, i64* %14, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
